# UniversalDemo

./: .gitignore  CMakeLists.txt  DynamicLib.h  FuncPtr.h  MyButton.h  TestConfig.json  TestLiber.cpp  TestLiber.h  config.ini  config.json  flowlayout.cpp  flowlayout.h  funcData_Button.cpp  funcData_Button.h  func_args.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
TestLibrary/: TestLibrary.cpp  TestLibrary.h
